<resources>
    <string name="app_name"> Watching The Beat </string>

    <!-- Splash Screen -->
    <string name="splash_title"> Cinematic Symphony </string>

    <string name="splash_subtitle"> When rhythm and visuals tell unforgettable stories </string>

    <!-- Login Screen & SignIn Screen -->
    <string name="email_label"> E-Mail </string>
    <string name="name_label"> Name </string>
    <string name="cellphone_label"> Cell-Phone </string>
    <string name="password_label"> Password </string>

    <string name="log_label"> Login </string>
    <string name="sign_label"> SignIn </string>

    <string name="option_sign"> Already got a account? </string>
    <string name="option_login"> Doesn\'t have account? </string>

    <string name="click_me"> Click Here </string>

    <string name="fav_screen"> Your Favorites </string>

    <!-- Acessibility -->
    <string name="sun_accessibility"> Sun, representing the light mode </string>
    <string name="moon_accessibility"> Moon, representing the dark mode </string>
    <string name="star_accessibility"> Stars representing the rating of the movie </string>
    <string name="splash_accessibility"> Film clapperboard with musical notes and the text Watching the Beat </string>

    <string name="share_accessbility"> Share Icon </string>
    <string name="fav_accessbility"> Favorite Icon </string>
    <string name="github_accessbility"> GitHub Icon </string>

    <!-- Mock Data -->
    <string name="mock_name" translatable="false"> Whiplash </string>
    <string name="mock_year" translatable="false"> 2014 </string>

    <!-- Menu Items -->
    <string name="menu_home"> Home </string>

    <string name="menu_share"> Share </string>

    <string name="menu_about"> About Us </string>

    <string name="menu_fav"> Favorites </string>

    <string name="menu_exit"> Exit </string>

    <!-- Devs -->

    <string name="one_dev_role"> Developer &amp; Designer </string>
    <string name="one_dev_description">Full-Stack Developer at the technology solutions company Teknisa. \n\nCurrently pursuing a degree in Information Systems at PUC Minas, as well as a technical course in Systems Development with an emphasis on mobile applications at UFMG.</string>

    <string name="two_dev_role"> Developer </string>
    <string name="two_dev_description">Stock Manager at the online sales company SBBOX. \n\nCurrently pursuing a technical course in Systems Development with an emphasis on mobile applications at UFMG.</string>

    <string name="three_dev_role"> Developer </string>
    <string name="three_dev_description">Biologist graduated from PUC Minas in 2022 and passionate about technology. \n\nCurrently pursuing a degree in Information Systems at PUC Minas, as well as a technical course in Systems Development with an emphasis on mobile applications at UFMG.</string>
</resources>