<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/splash_activity"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"

    android:orientation="vertical"

    android:gravity="center"

    android:background="?attr/theme_background_color"

    tools:context=".Screens.SplashActivity" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="?attr/theme_logo"

            android:layout_gravity="center"

            android:contentDescription="@string/splash_accessibility" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="64dp"

            android:layout_gravity="center"
            android:gravity="center_vertical"

            android:textSize="24sp"
            android:text="@string/splash_title"
            android:textColor="?attr/theme_text_color"
            android:fontFamily="@font/montserrat_bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="64dp"

            android:layout_gravity="center"
            android:gravity="center_vertical"

            android:textSize="20sp"
            android:fontFamily="@font/montserrat"
            android:text="@string/splash_subtitle"
            android:textColor="?attr/theme_text_color" />

</LinearLayout>