<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="?attr/theme_background_color">

    <ImageView android:id="@+id/img_dev"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="16dp"

        android:src="@drawable/img_poster_duque"
        />

    <TextView android:id="@+id/lbl_title"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toEndOf="@id/img_dev"
        android:layout_alignTop="@id/img_dev"

        android:textSize="18sp"
        android:fontFamily="@font/lobster"
        android:textColor="?attr/theme_text_color" />

    <TextView android:id="@+id/lbl_role"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="24dp"

        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/lbl_title"

        android:textSize="18sp"
        android:text="@string/one_dev_role"
        android:textColor="?attr/theme_text_color"
        android:fontFamily="@font/lobster" />

    <LinearLayout android:id="@+id/description"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lbl_title"
        android:layout_toEndOf="@id/img_dev"

        android:layout_marginTop="16dp"

        android:orientation="horizontal">

        <TextView android:id="@+id/dev_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="12sp"
            android:text="@string/one_dev_description"
            android:fontFamily="@font/montserrat"
            android:textColor="?attr/theme_text_color"
            />
        
    </LinearLayout>

    <LinearLayout android:id="@+id/btn_section"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="2dp"

        android:layout_below="@+id/description"
        android:layout_toEndOf="@id/img_dev"

        android:layout_marginTop="16dp"

        android:orientation="horizontal">

        <ImageView android:id="@+id/btn_github"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"

            android:src="@drawable/ic_github"
            android:background="@android:color/transparent"
            android:contentDescription="@string/fav_accessbility" />

        <ImageView android:id="@+id/btn_share"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_share"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_accessbility" />

    </LinearLayout>

    <View android:id="@+id/line"

        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:layout_marginStart="116dp"
        android:layout_marginVertical="32dp"

        android:layout_below="@id/btn_section"
        android:layout_alignParentEnd="true"

        android:background="@color/stroke_color" />

</RelativeLayout>