<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:id="@+id/sign_in_activity"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fitsSystemWindows="true"

    android:background="?attr/theme_background_color"

    tools:context=".Screens.SignInActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginBottom="24dp">

    <br.team.wtb.Utils.Theme.CustomThemeSwitch android:id="@+id/theme_switch"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView android:id="@+id/logo"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"

        android:src="?attr/theme_logo"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/theme_switch" />

    <LinearLayout android:id="@+id/name_section"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"

        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:text="@string/name_label"
            android:textColor="?attr/theme_text_color"
            android:fontFamily="@font/montserrat_bold"
            />

        <EditText android:id="@+id/name_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp"
            android:layout_marginTop="24dp"

            android:textSize="16sp"
            android:textColor="?attr/theme_background_color"
            android:fontFamily="@font/montserrat_medium"

            android:background="@drawable/input" />

    </LinearLayout>

    <LinearLayout android:id="@+id/email_section"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_section"

        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:text="@string/email_label"
            android:textColor="?attr/theme_text_color"
            android:fontFamily="@font/montserrat_bold"
            />

        <EditText android:id="@+id/email_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp"
            android:layout_marginTop="24dp"

            android:textSize="16sp"
            android:textColor="?attr/theme_background_color"
            android:fontFamily="@font/montserrat_medium"

            android:background="@drawable/input" />

    </LinearLayout>

    <LinearLayout android:id="@+id/cellphone_section"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_section"

        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:text="@string/cellphone_label"
            android:textColor="?attr/theme_text_color"
            android:fontFamily="@font/montserrat_bold"
            />

        <EditText android:id="@+id/cellphone_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp"
            android:layout_marginTop="24dp"

            android:textSize="16sp"
            android:textColor="?attr/theme_background_color"
            android:fontFamily="@font/montserrat_medium"

            android:background="@drawable/input" />

    </LinearLayout>

    <LinearLayout android:id="@+id/password_section"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cellphone_section"

        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="24dp"

        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:text="@string/password_label"
            android:textColor="?attr/theme_text_color"
            android:fontFamily="@font/montserrat_bold"
            />

        <EditText android:id="@+id/password_input"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="24dp"
            android:layout_marginTop="24dp"

            android:textSize="16sp"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="?attr/theme_background_color"

            android:background="@drawable/input" />
    </LinearLayout>

    <Button android:id="@+id/btn_sign"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="12dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_section"

        android:textSize="24sp"
        android:text="@string/sign_label"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/light_text_color"

        android:backgroundTint="@color/primary_color"/>

    <LinearLayout android:id="@+id/option_login"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"

        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign"

        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:text="@string/option_sign"
            android:textColor="?attr/theme_text_color"
            android:fontFamily="@font/montserrat_bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="8dp"

            android:textSize="20sp"
            android:text="@string/click_me"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/montserrat_bold" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
