<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="?attr/theme_background_color">

    <ImageView android:id="@+id/img_movie"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_margin="16dp"

        android:src="@drawable/img_poster_whiplash"
        />

    <TextView android:id="@+id/lblTitle"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_toEndOf="@id/img_movie"
        android:layout_alignTop="@id/img_movie"

        android:textSize="18sp"
        android:text="@string/mock_name"
        android:textColor="?attr/theme_text_color"
        android:fontFamily="@font/lobster" />


    <LinearLayout android:id="@+id/star_section"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/lblTitle"
        android:layout_toEndOf="@id/img_movie"

        android:layout_marginTop="16dp"

        android:orientation="horizontal">

        <ImageView android:id="@+id/star1"

            android:layout_width="20dp"
            android:layout_height="20dp"

            android:layout_marginHorizontal="2dp"

            android:src="@drawable/ic_star_inactive"
            android:background="@android:color/transparent"
            android:contentDescription="@string/star_accessibility" />

        <ImageView android:id="@+id/star2"

            android:layout_width="20dp"
            android:layout_height="20dp"

            android:layout_marginHorizontal="2dp"

            android:src="@drawable/ic_star_inactive"
            android:background="@android:color/transparent"
            android:contentDescription="@string/star_accessibility" />

        <ImageView android:id="@+id/star3"

            android:layout_width="20dp"
            android:layout_height="20dp"

            android:layout_marginHorizontal="2dp"

            android:src="@drawable/ic_star_inactive"
            android:background="@android:color/transparent"
            android:contentDescription="@string/star_accessibility" />

        <ImageView android:id="@+id/star4"

            android:layout_width="20dp"
            android:layout_height="20dp"

            android:layout_marginHorizontal="2dp"

            android:src="@drawable/ic_star_inactive"
            android:background="@android:color/transparent"
            android:contentDescription="@string/star_accessibility" />

        <ImageView android:id="@+id/star5"

            android:layout_width="20dp"
            android:layout_height="20dp"

            android:layout_marginHorizontal="2dp"

            android:src="@drawable/ic_star_inactive"
            android:background="@android:color/transparent"
            android:contentDescription="@string/star_accessibility" />
    </LinearLayout>

    <LinearLayout android:id="@+id/btn_section"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/star_section"
        android:layout_toEndOf="@id/img_movie"

        android:layout_marginTop="16dp"

        android:orientation="horizontal">

        <ImageView android:id="@+id/btn_fav"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"

            android:src="@drawable/ic_inactive_bookmark"
            android:background="@android:color/transparent"
            android:contentDescription="@string/fav_accessbility" />

        <ImageView android:id="@+id/btn_share"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:src="@drawable/ic_share"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_accessbility" />

    </LinearLayout>

    <View android:id="@+id/line"

        android:layout_width="240dp"
        android:layout_height="1dp"

        android:layout_marginVertical="24dp"
        android:layout_below="@id/btn_section"
        android:layout_alignParentEnd="true"

        android:background="@color/stroke_color" />

</RelativeLayout>